[gd_scene load_steps=5 format=3 uid="uid://b40tupifpjvsa"]

[ext_resource type="PackedScene" uid="uid://dlts1i6f80ley" path="res://scenes/laser/laser.tscn" id="1_pfafh"]
[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_sj3mf"]
[ext_resource type="PackedScene" uid="uid://ce23s2kmxb8ku" path="res://scenes/pipe/pipe.tscn" id="2_187mf"]
[ext_resource type="AudioStream" uid="uid://bj5r1dn4gr5lv" path="res://assets/audio/score.wav" id="4_1dpq8"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_sj3mf")

[node name="Laser" parent="." instance=ExtResource("1_pfafh")]
position = Vector2(-6, -36)

[node name="Upper" parent="." instance=ExtResource("2_187mf")]
position = Vector2(2.08165e-12, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_187mf")]
position = Vector2(2.08165e-12, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(133, -1)
scale = Vector2(1.675, 1.85)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1dpq8")

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
